content(aimage): add app entery image

--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
 			<tr onmouseout="aimage_stop()" onmouseover="aimage_start()">
 				<td style="padding:20px;width:25%;vertical-align:top">
 				  <div class="one">
-				    <div class="two" id="aimage" style="opacity: 0;"><video width="120%" height="120%" muted="" autoplay="" loop="">
-				    <source src="imgs/blank.png" type="video/mp4">
+				    <div class="two" id="aimage" style="opacity: 0;"><video width="120" height="120" muted="" autoplay="" loop="">
+				    <source src="imgs/aimage.png" type="video/mp4">
 				    Your browser does not support the video tag.
 				    </video></div>
-				    <img src="imgs/blank.png", width="190">
+                    <center><img src="imgs/aimage.png" alt="aimage" width="140" height="130"></center>
 				  </div>
 				  <script type="text/javascript">
 				    function aimage_start() {
