docs(index): add mid-term examination result

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 		                <div class="bullet empty"></div>
 		                <div class="date">2021年04月</div>
 		                <div class="desc">
-		                    <h3>项目中期总结</h3>
-		                    <h4>至项目中期，我们应完成工程开发的所有任务并承接前一阶段学术研究相关的工作。</h4>
+		                    <h3>项目中期检查</h3>
+		                    <h4>我们顺利通过了合肥工业大学国家级大学生创新创业计划中期检查。</h4>
 		                </div>
 		            </li>
 		            <li>
