docs(schedule): update aimage

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		                <div class="bullet default"></div>
 		                <div class="date">2020年11月</div>
 		                <div class="desc">
-		                    <h3>工程开发成果 - Ss watermark</h3>
+		                    <h3>工程开发成果 & 成果转化 - Ss watermark</h3>
 		                    <h4>我们完成了开发名为 <strong><a href="#工程性成果-sswatermark">Ss watermark</a></strong> 的图像隐式水印工具，并集成到了安卓端。 同期，该项成果获得了安徽省大学生信息安全作品赛二等奖。</h4>
 		                </div>
 		            </li>
@@ -140,6 +140,14 @@
 		                <div class="desc">
 		                    <h3>项目中期检查</h3>
 		                    <h4>我们顺利通过了合肥工业大学国家级大学生创新创业计划中期检查。</h4>
+		                </div>
+					</li>
+					<li>
+		                <div class="bullet default"></div>
+		                <div class="date">2021年05月</div>
+		                <div class="desc">
+		                    <h3>工程开发成果转化 - AImage</h3>
+		                    <h4>我们开发名为 <strong><a href="#工程性成果-aimage">AImage</a></strong> 的艺术化图像创作平台，获得了中国计算机设计大赛软件应用开发（非游戏类）组省赛资格。</h4>
 		                </div>
 		            </li>
 		            <li>
@@ -289,7 +297,6 @@
 				  [<a href="https://github.com/HFUT-NUIETP/SS-watermark">源代码</a>]
 				  <p></p>
 				  <p>一个隐式图像水印工具（安卓交互终端），其功能已迁移至<a href="#工程性成果-aimage"><strong>AImage</strong></a>，将不再维护。</p>
-				  <!-- TO-DO add AImage web link -->
 				</td>
 			</tr>
 			
@@ -361,9 +368,9 @@
         	</tr>
         	<br><br>
         	<tr>
-        		<center><strong><font size="5">AImage(on the way...)</font></strong></center>
+        		<center><strong><font size="5">AImage</font></strong></center>
         		<br>
-        		<iframe width="540" height="303" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        		<center><iframe width="540" height="303" src="https://www.youtube.com/embed/M0nXC-fSkIY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         	</tr>
 
         </tbody></table>
