docs(timeline): update

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		                </div>
 		            </li>
 		            <li>
-		                <div class="bullet empty"></div>
+		                <div class="bullet default"></div>
 		                <div class="date">2021年04月</div>
 		                <div class="desc">
 		                    <h3>项目中期检查</h3>
@@ -144,10 +144,26 @@
 					</li>
 					<li>
 		                <div class="bullet default"></div>
+		                <div class="date">2021年03月</div>
+		                <div class="desc">
+		                    <h3>学术研究成果 - CAD/Graphics</h3>
+		                    <h4>我们的研究成果 <strong><a href="#学术成果-RetinexPencil">RetinexPencil</a></strong> - “Robust Pencil Drawing Generation via Fast Retinex Decomposition” 已被 <strong>CAD/Graphics 2021</strong> (CCF推荐会议)接收。同时，文章已发表在 <strong>Computers & Graphics</strong> 期刊(CCF推荐期刊，JCR图形学一区)。</h4>
+		                </div>
+		            </li>
+					<li>
+		                <div class="bullet default"></div>
 		                <div class="date">2021年05月</div>
 		                <div class="desc">
 		                    <h3>工程开发成果转化 - AImage</h3>
 		                    <h4>我们开发名为 <strong><a href="#工程性成果-aimage">AImage</a></strong> 的艺术化图像创作平台，获得了中国计算机设计大赛软件应用开发（非游戏类）组省赛资格。</h4>
+		                </div>
+					</li>
+					<li>
+		                <div class="bullet empty"></div>
+		                <div class="date">2021年05月</div>
+		                <div class="desc">
+		                    <h3>工程开发成果 - AI Album</h3>
+		                    <h4>我们目前正在开发名为 <strong><a href="">AI Album</a></strong> 的相册管理平台。</h4>
 		                </div>
 		            </li>
 		            <li>
@@ -379,7 +395,7 @@
     	<br>
     	<ul>
     		<li>该项目由合肥工业大学国家级大学生创新创业计划资助，项目编号为<b>202010359089</b>。</li>
-    		<li>感谢项目进行过程中，<a href="http://ci.hfut.edu.cn/2020/1209/c11505a245814/page.htm">郝世杰</a>老师、<a href="http://ci.hfut.edu.cn/2020/1209/c11506a245803/page.htm">刘建</a>老师、<a href="http://ci.hfut.edu.cn/2020/1208/c11504a245619/page.htm">欧阳一鸣</a>老师对本项目的大力支持。</li>
+    		<li>感谢项目进行过程中，<a href="http://ci.hfut.edu.cn/2020/1209/c11505a245814/page.htm">郝世杰</a>老师对本项目的大力支持。</li>
     		<li>感谢团队外的朋友（韦万宇同学、何凯柯同学）对本项目的帮助，不胜感激。</li>
     	</ul>
 
