docs(aialb): add "AI Album" section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		                <div class="date">2021年05月</div>
 		                <div class="desc">
 		                    <h3>工程开发成果 - AI Album</h3>
-		                    <h4>我们目前正在开发名为 <strong><a href="">AI Album</a></strong> 的相册管理平台。</h4>
+		                    <h4>我们目前正在开发名为 <strong><a href="#工程性成果-aialbm">AI Album</a></strong> 的个人智能相册管理系统。</h4>
 		                </div>
 		            </li>
 		            <li>
@@ -358,6 +358,48 @@
 				  <p>一个艺术化图像创作平台（安卓交互终端），持续维护中。</p>
 				</td>
 			</tr>
+
+			<tr onmouseout="aialbm_stop()" onmouseover="aialbm_start()">
+				<td style="padding:20px;width:25%;vertical-align:top">
+				  <div class="one">
+				    <div class="two" id="aialbm" style="opacity: 0;"><video width="120" height="120" muted="" autoplay="" loop="">
+				    <source src="imgs/blank.png" type="video/mp4">
+				    Your browser does not support the video tag.
+				    </video></div>
+                    <center><img src="imgs/blank.png" alt="aialbm" width="140" height="130"></center>
+				  </div>
+				  <script type="text/javascript">
+				    function aialbm_start() {
+				      document.getElementById('aialbm').style.opacity = "1";
+				    }
+				    function aialbm_stop() {
+				      document.getElementById('aialbm').style.opacity = "0";
+				    }
+				    inerf_stop()
+				  </script>
+				</td>
+				<td style="padding:20px;width:75%;vertical-align:top">
+				  <div id="工程性成果-aialbm"></div>
+				  <a href="">
+				    <papertitle>AI Album</papertitle></div>
+				  </a>
+				  <br><br>
+				  <a href="https://github.com/immocreat">谢建宇</a>,
+				  <a href="https://github.com/TWLK139">牛洪亮</a>,
+				  <a href="http://info.terrytengli.com/">黎腾</a> 
+				  <br>
+				  <em>中国XXXXXXXXX赛</em>, 2021
+				  <!-- <em>全国大学生计算机设计大赛(软件应用与开发组)</em>, 2021 -->
+				  <br>
+				  <!-- [<a href="file:///C:/Users/teng/Documents/0-code/git/litun5315.github.io/apps/ss-watermark.html">主页</a>] /
+				  [<a href="https://github.com/litun5315/apps/releases/download/v0.0/Ss.watermark.apk">应用(apk)</a>] /
+				  [<a href="https://github.com/HFUT-NUIETP/SS-watermark">源代码</a>] -->
+				  目前作品还未提交竞赛评审，客户端暂不开放测试、相关资料暂不开源。
+				  
+				  <p></p>
+				  <p>一个个人智能相册管理系统（PC交互终端），持续维护中。</p>
+				</td>
+			</tr>
         </tbody></table>
 
         <strong><heading>团队成员获奖</heading></strong>
@@ -387,6 +429,12 @@
         		<center><strong><font size="5">AImage</font></strong></center>
         		<br>
         		<center><iframe width="540" height="303" src="https://www.youtube.com/embed/M0nXC-fSkIY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+			</tr>
+			<br><br>
+			<tr>
+        		<center><strong><font size="5">AI Album (On the way ...)</font></strong></center>
+        		<br>
+        		<center><iframe width="540" height="303" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         	</tr>
 
         </tbody></table>
@@ -404,7 +452,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                  Issues contact at email, last update: Feb.23 2021.
+                  Issues contact at email, last update: May 2021.
               </p>
             </td>
           </tr>
